// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/atoms/ToggleButtons.vue snapshot default 1`] = `
<div
  class="toggle-buttons"
>
  
  <button
    class=""
    type="button"
  >
    a
  </button>
  <button
    class="selected"
    type="button"
  >
    b
  </button>
  <button
    class="selected"
    type="button"
  >
    c
  </button>
  
</div>
`;

exports[`src/components/atoms/ToggleButtons.vue snapshot disabled 1`] = `
<div
  class="toggle-buttons disabled"
>
  
  <button
    class=""
    type="button"
  >
    a
  </button>
  <button
    class="selected"
    type="button"
  >
    b
  </button>
  <button
    class=""
    type="button"
  >
    c
  </button>
  
</div>
`;
